--- a/index.html
+++ b/index.html
@@ -1,45 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Math Formulas Example</title>
+
   <!-- Load MathJax -->
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
+
   <style>
+    /* ✅ Layout and typography */
     body {
       font-family: Arial, sans-serif;
-      max-width: 800px;
+      max-width: 850px;
       margin: 40px auto;
-      line-height: 1.6;
+      padding: 0 20px;
+      line-height: 1.7;
+      background-color: #fafafa;
+      color: #222;
     }
-    h1 {
-      color: #333;
+
+    h1, h2 {
+      color: #2c3e50;
+      line-height: 1.3;
     }
+
+    /* ✅ Styling for formula blocks */
     .formula {
       background: #f7f7f7;
-      padding: 10px;
-      border-radius: 8px;
-      margin: 20px 0;
+      border-left: 4px solid #4a90e2;
+      padding: 12px 16px;
+      border-radius: 6px;
+      margin: 24px 0;
+      font-size: 1.1em;
+    }
+
+    /* ✅ Better inline formulas */
+    .formula-inline {
+      background: #eef6ff;
+      padding: 2px 6px;
+      border-radius: 4px;
+    }
+
+    /* ✅ Mobile responsiveness */
+    @media (max-width: 600px) {
+      body {
+        margin: 20px auto;
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
+
 <body>
-  <h1>Math Formulas on GitHub Pages</h1>
-  <p>This site is hosted for free with <b>GitHub Pages</b> and uses <b>MathJax</b> to render LaTeX equations.</p>
+  <header>
+    <h1>Math Formulas on GitHub Pages</h1>
+    <p>
+      This site is hosted for free with <b>GitHub Pages</b> and uses 
+      <b>MathJax</b> to render LaTeX-style mathematical equations.
+    </p>
+  </header>
 
-  <div class="formula">
-    Example 1:  
-    \\( v_t = \dfrac{(\rho_p - \rho_f) g d^2}{18 \mu} \\)
-  </div>
+  <!-- Example 1 -->
+  <section class="formula">
+    <strong>Example 1:</strong><br>
+    Inline formula with terminal velocity:  
+    <span class="formula-inline">
+      \\( v_t = \dfrac{(\rho_p - \rho_f)\, g\, d^2}{18 \mu} \\)
+    </span>
+  </section>
 
-  <div class="formula">
-    Example 2:  
+  <!-- Example 2 -->
+  <section class="formula">
+    <strong>Example 2:</strong><br>
+    Block formula with Einstein’s equation:  
     $$ E = mc^2 $$
-  </div>
+  </section>
 
-  <p>Edit this file (<code>index.html</code>) in your repo to add more equations.</p>
+  <!-- Example 3 -->
+  <section class="formula">
+    <strong>Example 3:</strong><br>
+    Quadratic formula:  
+    $$ x = \frac{ -b \pm \sqrt{b^2 - 4ac}}{2a} $$
+  </section>
+
+  <footer>
+    <p>
+      ✨ Edit this file (<code>index.html</code>) in your repo to add more equations.
+    </p>
+  </footer>
 </body>
 </html>
