--- a/index.html
+++ b/index.html
@@ -1,96 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Math Formulas Example</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Interactive Math Calculator</title>
 
-  <!-- Load MathJax -->
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script id="MathJax-script" async
-    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-  </script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async 
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
 
-  <style>
-    /* ✅ Layout and typography */
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 850px;
-      margin: 40px auto;
-      padding: 0 20px;
-      line-height: 1.7;
-      background-color: #fafafa;
-      color: #222;
-    }
-
-    h1, h2 {
-      color: #2c3e50;
-      line-height: 1.3;
-    }
-
-    /* ✅ Styling for formula blocks */
-    .formula {
-      background: #f7f7f7;
-      border-left: 4px solid #4a90e2;
-      padding: 12px 16px;
-      border-radius: 6px;
-      margin: 24px 0;
-      font-size: 1.1em;
-    }
-
-    /* ✅ Better inline formulas */
-    .formula-inline {
-      background: #eef6ff;
-      padding: 2px 6px;
-      border-radius: 4px;
-    }
-
-    /* ✅ Mobile responsiveness */
-    @media (max-width: 600px) {
-      body {
-        margin: 20px auto;
-        font-size: 1rem;
-      }
-    }
-  </style>
+<style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    max-width: 700px;
+    margin: 40px auto;
+    padding: 0 20px;
+    color: #222;
+    background: #f4f6f8;
+  }
+  h1 {
+    color: #0a4a8a;
+    text-align: center;
+  }
+  label {
+    display: block;
+    margin-top: 15px;
+    font-weight: 600;
+  }
+  input[type="number"] {
+    width: 100%;
+    padding: 8px;
+    margin-top: 6px;
+    border: 2px solid #0a4a8a;
+    border-radius: 6px;
+    font-size: 1rem;
+  }
+  select {
+    width: 100%;
+    padding: 8px;
+    margin-top: 6px;
+    border-radius: 6px;
+    border: 2px solid #0a4a8a;
+    font-size: 1rem;
+  }
+  button {
+    margin-top: 20px;
+    background-color: #0a4a8a;
+    border: none;
+    color: white;
+    padding: 12px 20px;
+    font-size: 1.1rem;
+    border-radius: 8px;
+    cursor: pointer;
+    width: 100%;
+  }
+  button:hover {
+    background-color: #08386b;
+  }
+  .results {
+    margin-top: 30px;
+    background: white;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 0 14px rgba(0, 74, 138, 0.15);
+  }
+  .step {
+    margin-bottom: 14px;
+  }
+</style>
 </head>
-
 <body>
-  <header>
-    <h1>Math Formulas on GitHub Pages</h1>
-    <p>
-      This site is hosted for free with <b>GitHub Pages</b> and uses 
-      <b>MathJax</b> to render LaTeX-style mathematical equations.
-    </p>
-  </header>
 
-  <!-- Example 1 -->
-  <section class="formula">
-    <strong>Example 1:</strong><br>
-    Inline formula with terminal velocity:  
-    <span class="formula-inline">
-      \\( v_t = \dfrac{(\rho_p - \rho_f)\, g\, d^2}{18 \mu} \\)
-    </span>
-  </section>
+<h1>Terminal Velocity Calculator</h1>
+<p>Given the formula: \\( v_t = \dfrac{(\rho_p - \rho_f) g d^2}{18 \mu} \\)</p>
 
-  <!-- Example 2 -->
-  <section class="formula">
-    <strong>Example 2:</strong><br>
-    Block formula with Einstein’s equation:  
-    $$ E = mc^2 $$
-  </section>
+<form id="calcForm">
+  <label for="variable">Choose the variable to find:</label>
+  <select id="variable" name="variable" required>
+    <option value="vt">Terminal Velocity (v<sub>t</sub>)</option>
+    <option value="rhop">Particle Density (&#961;<sub>p</sub>)</option>
+    <option value="rhof">Fluid Density (&#961;<sub>f</sub>)</option>
+    <option value="g">Gravity (g)</option>
+    <option value="d">Diameter (d)</option>
+    <option value="mu">Viscosity (&#956;)</option>
+  </select>
 
-  <!-- Example 3 -->
-  <section class="formula">
-    <strong>Example 3:</strong><br>
-    Quadratic formula:  
-    $$ x = \frac{ -b \pm \sqrt{b^2 - 4ac}}{2a} $$
-  </section>
+  <div id="inputs-container"></div>
 
-  <footer>
-    <p>
-      ✨ Edit this file (<code>index.html</code>) in your repo to add more equations.
-    </p>
-  </footer>
+  <button type="submit">Calculate</button>
+</form>
+
+<div id="results" class="results" aria-live="polite" style="display:none;"></div>
+
+<script>
+// Variable info for labels and units
+const variables = {
+  vt: { label: "Terminal Velocity (vₜ)", symbol: "v_t" },
+  rhop: { label: "Particle Density (ρₚ)", symbol: "\\rho_p" },
+  rhof: { label: "Fluid Density (ρ_f)", symbol: "\\rho_f" },
+  g: { label: "Gravity (g)", symbol: "g" },
+  d: { label: "Diameter (d)", symbol: "d" },
+  mu: { label: "Viscosity (μ)", symbol: "\\mu" }
+};
+
+// Input fields that depend on which variable to find
+const formulaVariables = ["vt", "rhop", "rhof", "g", "d", "mu"];
+
+const inputsContainer = document.getElementById("inputs-container");
+const variableSelect = document.getElementById("variable");
+const resultsDiv = document.getElementById("results");
+
+// Render inputs except the one to be solved
+function renderInputs() {
+  const toFind = variableSelect.value;
+  inputsContainer.innerHTML = "";
+
+  formulaVariables.forEach(variable => {
+    if (variable !== toFind) {
+      const vars = variables[variable];
+      const label = document.createElement("label");
+      label.setAttribute("for", variable);
+      label.innerHTML = `Enter ${vars.label}:`;
+      const input = document.createElement("input");
+      input.type = "number";
+      input.step = "any";
+      input.name = variable;
+      input.id = variable;
+      input.required = true;
+      inputsContainer.appendChild(label);
+      inputsContainer.appendChild(input);
+    }
+  });
+}
+
+variableSelect.addEventListener("change", () => {
+  renderInputs();
+  resultsDiv.style.display = "none";
+  resultsDiv.innerHTML = "";
+});
+
+renderInputs();
+
+document.getElementById("calcForm").addEventListener("submit", event => {
+  event.preventDefault();
+
+  // Gather input values as floats
+  const toFind = variableSelect.value;
+  const vals = {};
+  try {
+    formulaVariables.forEach(v => {
+      if (v !== toFind) {
+        const el = document.getElementById(v);
+        const val = parseFloat(el.value);
+        if (isNaN(val)) throw new Error(`Please enter a valid number for ${variables[v].label}`);
+        vals[v] = val;
+      }
+    });
+  } catch(err) {
+    alert(err.message);
+    return;
+  }
+
+  // Helper: squared
+  const sq = x => x * x;
+
+  // Calculate based on selected variable to find
+  let message = "";
+  let result = null;
+
+  switch(toFind) {
+    case "vt":
+      result = ((vals.rhop - vals.rhof) * vals.g * sq(vals.d)) / (18 * vals.mu);
+      message += `<div class="step">Step: Substitute values into formula:<br>
+                  \\( v_t = \\frac{(\\rho_p - \\rho_f) g d^2}{18 \\mu} = \\frac{(${vals.rhop} - ${vals.rhof}) \\times ${vals.g} \\times ${vals.d}^2}{18 \\times ${vals.mu}} \\)</div>`;
+      message += `<div class="step">Step: Calculate numerator:<br>
+                  \\( (${vals.rhop} - ${vals.rhof}) \\times ${vals.g} \\times ${sq(vals.d)} = ${(vals.rhop - vals.rhof) * vals.g * sq(vals.d)} \\)</div>`;
+      message += `<div class="step">Step: Calculate denominator:<br>
+                  \\( 18 \\times ${vals.mu} = ${18 * vals.mu} \\)</div>`;
+      message += `<div class="step"><strong>Result:</strong><br>
+                  \\( v_t = ${result.toFixed(5)} \\)</div>`;
+      break;
+
+    case "rhop":
+      result = (18 * vals.mu * vals.vt) / (vals.g * sq(vals.d)) + vals.rhof;
+      message += `<div class="step">Rearranged formula for \\( \\rho_p \\):<br>
+                  \\( \\rho_p = \\frac{18 \\mu v_t}{g d^2} + \\rho_f \\)</div>`;
+      message += `<div class="step">Substitute values:<br>
+                  \\( \\rho_p = \\frac{18 \\times ${vals.mu} \\times ${vals.vt}}{${vals.g} \\times ${sq(vals.d)}} + ${vals.rhof} = ${result.toFixed(5)} \\)</div>`;
+      message += `<div class="step"><strong>Result:</strong> \\( \\rho_p = ${result.toFixed(5)} \\)</div>`;
+      break;
+
+    case "rhof":
+      result = vals.rhop - (18 * vals.mu * vals.vt) / (vals.g * sq(vals.d));
+      message += `<div class="step">Rearranged formula for \\( \\rho_f \\):<br>
+                  \\( \\rho_f = \\rho_p - \\frac{18 \\mu v_t}{g d^2} \\)</div>`;
+      message += `<div class="step">Substitute values:<br>
+                  \\( \\rho_f = ${vals.rhop} - \\frac{18 \\times ${vals.mu} \\times ${vals.vt}}{${vals.g} \\times ${sq(vals.d)}} = ${result.toFixed(5)} \\)</div>`;
+      message += `<div class="step"><strong>Result:</strong> \\( \\rho_f = ${result.toFixed(5)} \\)</div>`;
+      break;
+
+    case "g":
+      result = (18 * vals.mu * vals.vt) / ((vals.rhop - vals.rhof) * sq(vals.d));
+      message += `<div class="step">Rearranged formula for \\( g \\):<br>
+                  \\( g = \\frac{18 \\mu v_t}{(\\rho_p - \\rho_f) d^2} \\)</div>`;
+      message += `<div class="step">Substitute values:<br>
+                  \\( g = \\frac{18 \\times ${vals.mu} \\times ${vals.vt}}{(${vals.rhop} - ${vals.rhof}) \\times ${sq(vals.d)}} = ${result.toFixed(5)} \\)</div>`;
+      message += `<div class="step"><strong>Result:</strong> \\( g = ${result.toFixed(5)} \\)</div>`;
+      break;
+
+    case "d":
+      // Rearranged formula to solve for d:
+      // d = sqrt( (18 mu vt) / ( (rhop - rhof) g ) )
+      result = Math.sqrt((18 * vals.mu * vals.vt) / ((vals.rhop - vals.rhof) * vals.g));
+      message += `<div class="step">Rearranged formula for \\( d \\):<br>
+                  \\( d = \\sqrt{ \\frac{18 \\mu v_t}{(\\rho_p - \\rho_f) g} } \\)</div>`;
+      message += `<div class="step">Substitute values:<br>
+                  \\( d = \\sqrt{ \\frac{18 \\times ${vals.mu} \\times ${vals.vt}}{(${vals.rhop} - ${vals.rhof}) \\times ${vals.g}} } = ${result.toFixed(5)} \\)</div>`;
+      message += `<div class="step"><strong>Result:</strong> \\( d = ${result.toFixed(5)} \\)</div>`;
+      break;
+
+    case "mu":
+      result = ((vals.rhop - vals.rhof) * vals.g * sq(vals.d)) / (18 * vals.vt);
+      message += `<div class="step">Rearranged formula for \\( \\mu \\):<br>
+                  \\( \\mu = \\frac{(\\rho_p - \\rho_f) g d^2}{18 v_t} \\)</div>`;
+      message += `<div class="step">Substitute values:<br>
+                  \\( \\mu = \\frac{(${vals.rhop} - ${vals.rhof}) \\times ${vals.g} \\times ${sq(vals.d)}}{18 \\times ${vals.vt}} = ${result.toFixed(5)} \\)</div>`;
+      message += `<div class="step"><strong>Result:</strong> \\( \\mu = ${result.toFixed(5)} \\)</div>`;
+      break;
+  }
+
+  resultsDiv.innerHTML = message;
+  resultsDiv.style.display = "block";
+
+  // Rerender MathJax to parse new math content
+  MathJax.typesetPromise();
+});
+</script>
+
 </body>
 </html>
